fixed bug where pause didn't stop touch movement on mobile

--- a/app/assets/stylesheets/components/_tetris.scss
+++ b/app/assets/stylesheets/components/_tetris.scss
@@ -31,10 +31,10 @@ h1 {
   #highscores-modal {
     display: none;
     position : absolute;
-    top: -100%;
+    top: -100vh;
     left: 0;
     right: 0;
-    bottom: 100%;
+    bottom: 100vh;
     background-color: #000000aa;
     justify-content: center;
     align-items: center;
